trying to fix intro page on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@
   font-size: 250%;
   line-height: 10%;
   font-family: 'Gloria+Hallelujah', serif;
+  font-style: italic;
 }
 
 #intro-title {
@@ -124,7 +125,7 @@
     vertical-align: middle;
 }
 
-.photo-grid li:hover figcaption {
+.photo-grid li:hover li:active figcaption {
     opacity: 1;
 }
 
